[tool.poetry]
name = "hueplanner"
version = "0.1.0"
description = ""
authors = ["Alex Zakharov <dokzlo13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
pydantic = {extras = ["dotenv"], version = "^2.5.3"}
astral = "^3.2"
geopy = "^2.4.1"
pytz = "^2023.3.post1"
timezonefinder = "^6.2.0"
environs = "^9.5.0"
structlog = "^23.2.0"
uvloop = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
black = "^22.10.0"
isort = "^5.10.1"
bandit = "^1.7.4"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
flake8-isort = "^4.1.1"
flake8-bandit = "^3.0.0"
mypy = "^0.982"

[tool.bandit]
targets = ["hueplanner", "tests"]

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pip-cache
  | \.poetry
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
